--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/forspring?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 server.error.whitelabel.enabled=false
