--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/forspring?serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost/forspring?serverTimezone=UTC
+spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
@@ -18,3 +18,9 @@ spring.mail.password=cjcbntvfktymrbq
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
+recaptcha.secret=6LeCvbkUAAAAAA0-tYcMWHbTsdwa_6M9UWlOFfCe
+
+spring.session.jdbc.initialize-schema=always
+
+spring.session.jdbc.table-name=SPRING_SESSION
