--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,3 +24,4 @@ recaptcha.secret=6LeCvbkUAAAAAA0-tYcMWHbTsdwa_6M9UWlOFfCe
 spring.session.jdbc.initialize-schema=always
 
 spring.session.jdbc.table-name=SPRING_SESSION
+hostname = localhost:8080
