--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:postgresql://localhost/forspring?serverTimezone=UTC
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
@@ -25,4 +25,5 @@ spring.session.jdbc.initialize-schema=always
 
 spring.session.jdbc.table-name=SPRING_SESSION
 
-hostname = localhost:8080
+        
+
