--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 
 spring.freemarker.expose-request-attributes=true
 server.error.whitelabel.enabled=false
@@ -25,5 +25,5 @@ spring.session.jdbc.initialize-schema=always
 
 spring.session.jdbc.table-name=SPRING_SESSION
 
-        
+
 
